--- a/person-service/azure-pipelines.yml
+++ b/person-service/azure-pipelines.yml
@@ -56,6 +56,7 @@ stages:
           $xml = [Xml] (Get-Content $(solution))
           $version = $xml.Project.PropertyGroup.Version
           Write-Host "##vso[task.setvariable variable=appVersion;isOutput=true]$version"
+          Write-Host "##vso[task.setvariable variable=projectVersion]$version"
           Write-Host "Project version: $version"
 
     - task: NuGetCommand@2
@@ -111,9 +112,9 @@ stages:
         command: 'pack'
         packagesToPack: '$(solution)'
         packDirectory: '$(Build.ArtifactStagingDirectory)'
-        versioningScheme: 'off'
-#        versionEnvVar: 'appVersion'
-        configuration: '$(buildConfiguration) /p:PackageVersion=$(appVersion)'
+        versioningScheme: 'byEnvVar'
+        versionEnvVar: 'projectVersion'
+        configuration: '$(buildConfiguration)'
 
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Build Artifacts'
