improve azure pipeline #25

--- a/person-service/azure-pipelines.yml
+++ b/person-service/azure-pipelines.yml
@@ -168,7 +168,7 @@ stages:
   condition: succeeded()
   variables:
     imageTag: '$(projectVersion)'
-    appVersion: $[ dependencies.Build.outputs['SetVersion.appVersion'] ]
+    appVersion: $[ dependencies.Build.outputs['BuildAndTest.SetVersion.appVersion'] ]
   jobs:
   - job: CommitNewTag
     steps:
