improve azure pipeline #27

--- a/person-service/azure-pipelines.yml
+++ b/person-service/azure-pipelines.yml
@@ -128,7 +128,7 @@ stages:
   condition: succeeded()
   variables:
     imageTag: '$(appVersion)'
-    appVersion: $[ dependencies.Build.outputs['BuildAndTest.SetVersion.appVersion'] ]
+    appVersion: $[ stageDependencies.Build.BuildAndTest.outputs['SetVersion.appVersion'] ]
   jobs:
   - job: BuildOnOpenShift
     steps:
