--- a/person-service/azure-pipelines.yml
+++ b/person-service/azure-pipelines.yml
@@ -105,16 +105,18 @@ stages:
         command: 'build'
         projects: '$(solution)'
         arguments: '--configuration $(buildConfiguration)'
-
-    - task: DotNetCoreCLI@2
-      displayName: 'Pack'
-      inputs:
-        command: 'pack'
-        packagesToPack: '$(solution)'
-        packDirectory: '$(Build.ArtifactStagingDirectory)'
         versioningScheme: 'byEnvVar'
         versionEnvVar: 'projectVersion'
-        configuration: '$(buildConfiguration)'
+
+#    - task: DotNetCoreCLI@2
+#      displayName: 'Pack'
+#      inputs:
+#        command: 'build'
+#        packagesToPack: '$(solution)'
+##        packDirectory: '$(Build.ArtifactStagingDirectory)'
+#        versioningScheme: 'byEnvVar'
+#        versionEnvVar: 'projectVersion'
+#        configuration: '$(buildConfiguration)'
 
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Build Artifacts'
