--- a/person-service/azure-pipelines.yml
+++ b/person-service/azure-pipelines.yml
@@ -2,7 +2,6 @@ trigger:
   branches:
     include:
     - master
-    - test
   paths:
     include:
     - person-service/*
@@ -178,6 +177,33 @@ stages:
         inputs:
           script: |
             oc start-build $(imageStream)-s2i --follow -w   
+
+      - task: CmdLine@2
+        displayName: 'Install roxctl'
+        inputs:
+          script: |
+            echo "Downloading roxctl..."
+            curl -sSL https://mirror.openshift.com/pub/rhacs/assets/latest/bin/Linux/roxctl -o roxctl
+            chmod +x roxctl
+            sudo mv roxctl /usr/local/bin/
+            echo "roxctl version:"
+            roxctl version
+
+      - task: CmdLine@2
+        displayName: 'Scan image with roxctl'
+        inputs:
+          script: |
+            # Required env vars
+            export ROX_API_TOKEN=$(ACS_API_TOKEN)
+            export ROX_CENTRAL_ENDPOINT=$(ACS_CENTRAL_ENDPOINT)
+            IMAGE=quay.io/pminkows/$(imageStream):$(appVersion)
+      
+            echo "Scanning image: $IMAGE"
+            roxctl image scan \
+              --image "$IMAGE" \
+              --endpoint "$ROX_CENTRAL_ENDPOINT" \
+              --insecure-skip-tls-verify \
+              --token "$ROX_API_TOKEN"
 
 - stage: DeployOnTest
   dependsOn:
