--- a/insurance-service/azure-pipelines.yml
+++ b/insurance-service/azure-pipelines.yml
@@ -4,7 +4,7 @@ trigger:
     - master
   paths:
     include:
-    - insurance-service/*
+    - insurance-service/**
 
 variables:
   solution: 'insurance-service/insurance-service.csproj'
